Refactoring - split the repo / api
